--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MONGO_URL=
-SENTRY_AUTH_TOKEN=
+SENTRY_AUTH_TOKEN=NONE
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
@@ -15,7 +15,7 @@ GMAIL_REFRESH_TOKEN=
 GMAIL_ACCESS_TOKEN=
 TELEGRAM_BOT_TOKEN=
 RAPIDAPI_KEY=
-NEXTAUTH_URL=https://example.com
+NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 JWT_SIGNING_PRIVATE_KEY=
 JWT_SECRET=
@@ -23,6 +23,3 @@ BACKEND_PRIVATE_KEY=
 DEFAULT_NETWORK=
 INFURA_API_KEY=
 MERKLE_TREE_DEPTH=
-
-# MONGOMS_DOWNLOAD_URL=https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1804-4.2.8.tgz
-# MONGOMS_VERSION=4.2.8
