--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "npm-run-all -p tasks next:start",
         "dev": "yarn db:reset && npm-run-all -p tasks next:dev",
-        "build": "yarn lint && NODE_OPTIONS='--max-old-space-size=1536' next build --debug",
+        "build": "yarn lint && set NODE_OPTIONS='--max-old-space-size=1536' next build --debug",
         "analyze": "ANALYZE=true yarn build",
         "script": "node -r dotenv/config -r tsconfig-paths/register -r ts-node/register",
         "next:dev": "next dev",
